--- a/blog_gastronomia/css/app.css
+++ b/blog_gastronomia/css/app.css
@@ -29,6 +29,18 @@ body{
 }
 
 img.galeria{
-	width: 125px !important;
-	height: 80px !important;
+	width: 120px !important;
+	height: 60px !important;
+}
+
+.bb-1{
+	border-bottom: 1px solid #cccc;
+}
+
+.icon{
+	width: 23px;
+}
+
+.width-50px{
+	width: 50px;
 }
