--- a/blog_viajes/css/estilos.css
+++ b/blog_viajes/css/estilos.css
@@ -24,7 +24,7 @@ body{
 .margin-bottom-1{
 	margin-bottom: 10px;
 }
-.margin-bottom-3{
+.margin-bottom-4{
 	margin-bottom: 40px;
 }
 .margin-top-2{
@@ -55,10 +55,27 @@ li > a > span{
 .img-galeria-10{
 	width: 100%;
 }
+.width-70{
+	width: 70px;
+}
 .height-8{
 	height: 80%;
 }
+.h-100{
+	height: 100px;
+}
+.card-title{
+	font-weight: 600 !important;
+}
+.display-inline{
+	display: inline-block !important;
+	margin: 40px;
+	padding: 5px; 
+}
+.justify{
+	text-align: justify;
+}
 
-.width-50{
-	width: 50%;
+.fz-20{
+	font-size: 20px !important;
 }
