--- a/blog_viajes/css/estilos.css
+++ b/blog_viajes/css/estilos.css
@@ -5,7 +5,7 @@
 	width: 100%;
  	height: 100% !important;
 }
-body{
+.contenedor{
 	background-image: url("../image/fondo-viaje.jpg");
   	width: 100%;
   	background-repeat: repeat;
@@ -30,6 +30,9 @@ body{
 .margin-top-2{
 	margin-top: 20px;
 }
+.padding-top-2{
+	padding-top: 20px;
+}
 .margin-left-2{
 	margin-left: 20px;
 }
@@ -39,6 +42,9 @@ body{
 }
 li > a > span{
 	margin-left: 5px;
+}
+.margin-auto{
+	margin: auto auto;
 }
 .redes-sociales{
 	margin-left: 0px;
@@ -55,8 +61,11 @@ li > a > span{
 .img-galeria-10{
 	width: 100%;
 }
-.width-70{
-	width: 70px;
+.width-98{
+	width: 98%;
+}
+.width-150{
+	width: 150px;
 }
 .height-8{
 	height: 80%;
